log: 修复了discount的格式问题，修改了查看所有订单时返回的result里面内容的格式